--- a/application.json
+++ b/application.json
@@ -1,14 +1,30 @@
 {
   "pages": [
     {
-      "id": "Page1",
+      "id": "Login",
       "isDefault": true
+    },
+    {
+      "id": "Stories",
+      "isDefault": false
+    },
+    {
+      "id": "Vocab",
+      "isDefault": false
+    },
+    {
+      "id": "Profile",
+      "isDefault": false
     }
   ],
   "viewMode": false,
   "appIsExample": false,
   "unreadCommentThreads": 0,
   "color": "#D6D1F2",
+  "icon": "tree",
+  "unpublishedAppLayout": {
+    "type": "DESKTOP"
+  },
   "unpublishedCustomJSLibs": [],
   "publishedCustomJSLibs": [],
   "evaluationVersion": 2,
